brat/test/golden/binding/let.brat.golden
Error in badBinding (test/golden/binding/let.brat)@FC {start = Pos {line = 7, col = 14}, end = Pos {line = 7, col = 36}}:
badBinding = let x = twoThings in x
             ^^^^^^^^^^^^^^^^^^^^^^

  Internal error: Expected empty unders after abstract, got:
  (b1 :: Int)

